Added functionality up to version 8 (152 characters)